feat: WT security tests with @WebMvcTest